Moved cors config into application configuration, but may be rewritten with WebFlux